--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
       "sourceType": "script"
     },
     "rules": {
+      "experimentalObjectRestSpread": true,
       "jsx-a11y/href-no-hash": "off",
       "jsx-a11y/anchor-is-valid": ["warn", { "aspects": ["invalidHref"] }],
       "semi": 2,
