--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.2",
 		"ioredis": "^4.28.2",
+		"joi": "^17.5.0",
 		"mysql2": "^2.3.3",
 		"redis": "^4.0.1",
 		"sequelize": "^7.0.0-alpha.2",
