--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "express-mysql",
+	"name": "battle-simulator",
 	"version": "1.0.0",
 	"main": "index.js",
 	"license": "MIT",
@@ -8,7 +8,6 @@
 		"concurrently": "^7.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.2",
-		"ioredis": "^4.28.2",
 		"joi": "^17.5.0",
 		"mysql2": "^2.3.3",
 		"redis": "^4.0.1",
