--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"joi": "^17.5.0",
 		"mysql2": "^2.3.3",
 		"redis": "^4.0.1",
+		"rimraf": "^3.0.2",
 		"sequelize": "^7.0.0-alpha.2",
-		"socket.io": "^4.4.0"
+		"socket.io": "^4.4.0",
+		"winston": "^3.3.3"
 	},
 	"devDependencies": {
 		"eslint": "^8.2.0",
