--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
- "singleQuote": true,
- "tabWidth": 1,
- "useTabs": true
+	"singleQuote": true,
+	"tabWidth": 1,
+	"useTabs": true,
+	"printWidth": 120
 }
