Updated env example

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,6 @@ SOCKET_PORT=5001
 SOCKET_DOCKER_PORT=5001
 SOCKET_ORIGIN=*
 
-REDIS_HOST=redis://127.0.0.1:6379
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_DOCKER_PORT=6379
